generated-tests/tests/snapshots/rust/test_generated_reference_pattern.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let &x12 = &value5;

AST:
(source_file
  (let_declaration
    (reference_pattern
      (identifier x12)
    )
    (reference_expression
      (identifier value5)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "x12",
            position: Position {
                start_line: 1,
                start_column: 6,
                end_line: 1,
                end_column: 9,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "value5",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 13,
                end_line: 1,
                end_column: 19,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
