generated-tests/tests/snapshots/rust/test_generated_remaining_field_pattern.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
if let Type1 { .. } = value6 { }

AST:
(source_file
  (expression_statement
    (if_expression
      (let_condition
        (struct_pattern
          (type_identifier)
          (remaining_field_pattern)
        )
        (identifier value6)
      )
      (block)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "Type1",
            kind: TypeIdentifier,
            scope: None,
            start_line: 1,
            start_column: 8,
            end_line: 1,
            end_column: 13,
        },
        SerializableUsage {
            name: "value6",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 23,
            end_line: 1,
            end_column: 29,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
