generated-tests/tests/snapshots/rust/test_generated_removed_trait_bound.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
fn test_fn9<T>(_: T) { }

AST:
(source_file
  (function_item
    (identifier test_fn9)
    (type_parameters
      (type_identifier)
    )
    (parameters
      (parameter
        (type_identifier)
      )
    )
    (block)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "test_fn9",
            line_number: 1,
            definition_type: FunctionDefinition,
            scope: Some(
                "test_fn9",
            ),
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "T",
            kind: TypeIdentifier,
            scope: Some(
                "test_fn9",
            ),
            start_line: 1,
            start_column: 19,
            end_line: 1,
            end_column: 20,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
