generated-tests/tests/snapshots/rust/test_generated_return_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
fn f() -> i32 { return 1; }

AST:
(source_file
  (function_item
    (identifier f)
    (parameters)
    (primitive_type)
    (block
      (expression_statement
        (return_expression
          (integer_literal)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "f",
            position: Position {
                start_line: 1,
                start_column: 4,
                end_line: 1,
                end_column: 5,
            },
            definition_type: FunctionDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
