generated-tests/tests/snapshots/rust/test_generated_scoped_identifier.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
std::collections::HashMap::new()

AST:
(source_file
  (expression_statement
    (call_expression
      (scoped_identifier
        (scoped_identifier
          (scoped_identifier
            (identifier std)
            (identifier collections)
          )
          (identifier HashMap)
        )
        (identifier new)
      )
      (arguments)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "std::collections::HashMap::new()",
            kind: CallExpression,
            scope: None,
            start_line: 1,
            start_column: 1,
            end_line: 1,
            end_column: 33,
        },
        SerializableUsage {
            name: "std",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 1,
            end_line: 1,
            end_column: 4,
        },
        SerializableUsage {
            name: "collections",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 6,
            end_line: 1,
            end_column: 17,
        },
        SerializableUsage {
            name: "HashMap",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 19,
            end_line: 1,
            end_column: 26,
        },
        SerializableUsage {
            name: "new",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 28,
            end_line: 1,
            end_column: 31,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
