generated-tests/tests/snapshots/rust/test_generated_scoped_type_identifier.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let var8: std::vec::Vec<i32> = vec![];

AST:
(source_file
  (let_declaration
    (identifier var8)
    (generic_type
      (scoped_type_identifier
        (scoped_identifier
          (identifier std)
          (identifier vec)
        )
        (type_identifier)
      )
      (type_arguments
        (primitive_type)
      )
    )
    (macro_invocation
      (identifier vec)
      (token_tree)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "var8",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "var8",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 5,
            end_line: 1,
            end_column: 9,
        },
        SerializableUsage {
            name: "std",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 11,
            end_line: 1,
            end_column: 14,
        },
        SerializableUsage {
            name: "vec",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 16,
            end_line: 1,
            end_column: 19,
        },
        SerializableUsage {
            name: "vec",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 32,
            end_line: 1,
            end_column: 35,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
