generated-tests/tests/snapshots/rust/test_generated_slice_pattern.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let [x13, ..] = [1, 2, 3];

AST:
(source_file
  (let_declaration
    (slice_pattern
      (identifier x13)
      (remaining_field_pattern)
    )
    (array_expression
      (integer_literal)
      (integer_literal)
      (integer_literal)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "x13",
            position: Position {
                start_line: 1,
                start_column: 6,
                end_line: 1,
                end_column: 9,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
