generated-tests/tests/snapshots/rust/test_generated_string_literal.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let text = "test";

AST:
(source_file
  (let_declaration
    (identifier text)
    (string_literal
      (string_content)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "text",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "text",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 5,
            end_line: 1,
            end_column: 9,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
