generated-tests/tests/snapshots/rust/test_generated_struct_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
TestStruct { field2: value7 }

AST:
(source_file
  (expression_statement
    (struct_expression
      (type_identifier)
      (field_initializer_list
        (field_initializer
          (field_identifier)
          (identifier value7)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "TestStruct { field2: value7 }",
            kind: StructExpression,
            scope: None,
            start_line: 1,
            start_column: 1,
            end_line: 1,
            end_column: 30,
        },
        SerializableUsage {
            name: "value7",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 22,
            end_line: 1,
            end_column: 28,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
