generated-tests/tests/snapshots/rust/test_generated_struct_item.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
struct TestStruct1 { field3: i32 }

AST:
(source_file
  (struct_item
    name: (type_identifier "TestStruct1")
    body: (field_declaration_list
      (field_declaration
        name: (field_identifier "field3")
        type: (primitive_type "i32")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "TestStruct1",
            position: Position {
                start_line: 1,
                start_column: 8,
                end_line: 1,
                end_column: 19,
            },
            definition_type: StructDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
